--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^14.2.0",
     "@auth0/angular-jwt": "^5.1.2",
     "@fortawesome/fontawesome-free": "^6.4.0",
+    "date-fns": "^2.30.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
